### Added
### Changed
### Fixed

## Snapcrat

- `snap install philosopher`